# hi-to-cli

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CODEOWNERS  README.md  pyproject.toml  rag_dbr.py  vector_search.py
.github/: dependabot.yml
.github/workflows/: commitizen.yml  label_pr.yml  pre-commit.yml
data/: man7_info.csv
src/clhi/backend/: chain.py  terminal_utils.py
src/clhi/cli/: clhi.py  utils.py
